feat: logging endpoint and CLI
