# internal/api/ctl/proto.gen.go
@@ -1,4 +1,4 @@
-// forester-controller v0.0.1 de6c5b43283fa0d7e606bbfb6a7e0a11cc2336e8
+// forester-controller v0.0.1 809b97ce0ce129b609d0ab96f2ad80ff47d6b9a1
 // --
 // Code generated by webrpc-gen@v0.14.0-dev with golang generator. DO NOT EDIT.
 //
@@ -30,7 +30,7 @@ func WebRPCSchemaVersion() string {
 
 // Schema hash generated from your RIDL schema
 func WebRPCSchemaHash() string {
-	return "de6c5b43283fa0d7e606bbfb6a7e0a11cc2336e8"
+	return "809b97ce0ce129b609d0ab96f2ad80ff47d6b9a1"
 }
 
 //
@@ -68,6 +68,14 @@ type System struct {
 	ApplianceID *int64            `json:"ApplianceID"`
 	Appliance   *Appliance        `json:"Appliance"`
 	UID         *string           `json:"UID"`
+	InstallUUID string            `json:"InstallUUID"`
+}
+
+type LogEntry struct {
+	Path       string    `json:"Path"`
+	Size       int64     `json:"Size"`
+	CreatedAt  time.Time `json:"CreatedAt"`
+	ModifiedAt time.Time `json:"ModifiedAt"`
 }
 
 type Snippet struct {
@@ -102,6 +110,7 @@ type SystemService interface {
 	BootNetwork(ctx context.Context, systemPattern string) error
 	BootLocal(ctx context.Context, systemPattern string) error
 	Kickstart(ctx context.Context, systemPattern string) (string, error)
+	Logs(ctx context.Context, systemPattern string) ([]*LogEntry, error)
 }
 
 type SnippetService interface {
@@ -136,6 +145,7 @@ var WebRPCServices = map[string][]string{
 		"BootNetwork",
 		"BootLocal",
 		"Kickstart",
+		"Logs",
 	},
 	"SnippetService": {
 		"Create",
@@ -751,6 +761,8 @@ func (s *systemServiceServer) ServeHTTP(w http.ResponseWriter, r *http.Request) 
 		handler = s.serveBootLocalJSON
 	case "/rpc/SystemService/Kickstart":
 		handler = s.serveKickstartJSON
+	case "/rpc/SystemService/Logs":
+		handler = s.serveLogsJSON
 	default:
 		err := ErrWebrpcBadRoute.WithCause(fmt.Errorf("no handler for path %q", r.URL.Path))
 		s.sendErrorJSON(w, r, err)
@@ -1070,6 +1082,49 @@ func (s *systemServiceServer) serveKickstartJSON(ctx context.Context, w http.Res
 
 	respPayload := struct {
 		Ret0 string `json:"contents"`
+	}{ret0}
+	respBody, err := json.Marshal(respPayload)
+	if err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadResponse.WithCause(fmt.Errorf("failed to marshal json response: %w", err)))
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(respBody)
+}
+
+func (s *systemServiceServer) serveLogsJSON(ctx context.Context, w http.ResponseWriter, r *http.Request) {
+	ctx = context.WithValue(ctx, MethodNameCtxKey, "Logs")
+
+	reqBody, err := io.ReadAll(r.Body)
+	if err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to read request data: %w", err)))
+		return
+	}
+	defer r.Body.Close()
+
+	reqPayload := struct {
+		Arg0 string `json:"systemPattern"`
+	}{}
+	if err := json.Unmarshal(reqBody, &reqPayload); err != nil {
+		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to unmarshal request data: %w", err)))
+		return
+	}
+
+	// Call service method implementation.
+	ret0, err := s.SystemService.Logs(ctx, reqPayload.Arg0)
+	if err != nil {
+		rpcErr, ok := err.(WebRPCError)
+		if !ok {
+			rpcErr = ErrWebrpcEndpoint.WithCause(err)
+		}
+		s.sendErrorJSON(w, r, rpcErr)
+		return
+	}
+
+	respPayload := struct {
+		Ret0 []*LogEntry `json:"logs"`
 	}{ret0}
 	respBody, err := json.Marshal(respPayload)
 	if err != nil {
@@ -1536,12 +1591,12 @@ func (c *applianceServiceClient) Delete(ctx context.Context, name string) error 
 
 type systemServiceClient struct {
 	client HTTPClient
-	urls   [8]string
+	urls   [9]string
 }
 
 func NewSystemServiceClient(addr string, client HTTPClient) SystemService {
 	prefix := urlBase(addr) + SystemServicePathPrefix
-	urls := [8]string{
+	urls := [9]string{
 		prefix + "Register",
 		prefix + "Find",
 		prefix + "Acquire",
@@ -1550,6 +1605,7 @@ func NewSystemServiceClient(addr string, client HTTPClient) SystemService {
 		prefix + "BootNetwork",
 		prefix + "BootLocal",
 		prefix + "Kickstart",
+		prefix + "Logs",
 	}
 	return &systemServiceClient{
 		client: client,
@@ -1634,6 +1690,18 @@ func (c *systemServiceClient) Kickstart(ctx context.Context, systemPattern strin
 	}{}
 
 	err := doJSONRequest(ctx, c.client, c.urls[7], in, &out)
+	return out.Ret0, err
+}
+
+func (c *systemServiceClient) Logs(ctx context.Context, systemPattern string) ([]*LogEntry, error) {
+	in := struct {
+		Arg0 string `json:"systemPattern"`
+	}{systemPattern}
+	out := struct {
+		Ret0 []*LogEntry `json:"logs"`
+	}{}
+
+	err := doJSONRequest(ctx, c.client, c.urls[8], in, &out)
 	return out.Ret0, err
 }
 
