# openapi.gen.yaml
@@ -1,4 +1,4 @@
-# forester-controller v0.0.1 de6c5b43283fa0d7e606bbfb6a7e0a11cc2336e8
+# forester-controller v0.0.1 809b97ce0ce129b609d0ab96f2ad80ff47d6b9a1
 # --
 # Code generated by webrpc-gen@v0.14.0-dev with github.com/webrpc/gen-openapi@v0.11.1 generator; DO NOT EDIT
 # 
@@ -241,6 +241,7 @@ components:
         - Acquired
         - AcquiredAt
         - Comment
+        - InstallUUID
       properties:
         ID:
           type: number
@@ -270,6 +271,24 @@ components:
           type: object
           $ref: '#/components/schemas/Appliance'
         UID:
+          type: string
+        InstallUUID:
+          type: string
+    LogEntry:
+      type: object
+      required:
+        - Path
+        - Size
+        - CreatedAt
+        - ModifiedAt
+      properties:
+        Path:
+          type: string
+        Size:
+          type: number
+        CreatedAt:
+          type: string
+        ModifiedAt:
           type: string
     Snippet:
       type: object
@@ -451,6 +470,11 @@ components:
       properties:
         systemPattern:
           type: string
+    Logs_Request:
+      type: object
+      properties:
+        systemPattern:
+          type: string
     Register_Response:
       type: object
     Find_Response:
@@ -481,6 +505,15 @@ components:
       properties:
         contents:
           type: string
+    Logs_Response:
+      type: object
+      properties:
+        logs:
+          type: array
+          description: '[]LogEntry'
+          items:
+            type: object
+            $ref: '#/components/schemas/LogEntry'
     Create_Request:
       type: object
       properties:
@@ -1129,6 +1162,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Kickstart_Response'
+        '4XX':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                - $ref: '#/components/schemas/ErrorWebrpcEndpoint'
+                - $ref: '#/components/schemas/ErrorWebrpcRequestFailed'
+                - $ref: '#/components/schemas/ErrorWebrpcBadRoute'
+                - $ref: '#/components/schemas/ErrorWebrpcBadMethod'
+                - $ref: '#/components/schemas/ErrorWebrpcBadRequest'
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                - $ref: '#/components/schemas/ErrorWebrpcBadResponse'
+                - $ref: '#/components/schemas/ErrorWebrpcServerPanic'
+                - $ref: '#/components/schemas/ErrorWebrpcInternalError'
+  /rpc/SystemService/Logs:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Logs_Request'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Logs_Response'
         '4XX':
           description: Client error
           content:
